# proviso

./: .gitignore  CLAUDE.md  Dockerfile.devcontainer  Dockerfile.tools  README.md  build.sh  cli_spike.py  provision-audit.html  pyproject.toml
.ai/: CONTEXT.md  greg+claude.md  prommpt.md
.devcontainer/: devcontainer.json  enviornment.md  setup.sh
.devcontainer/config/: manifest.conf  modern-linux-utils.conf  starship.toml
.devcontainer/config/environments/: base-proxy.conf  build_time
.devcontainer/config/fish/: config.fish
.devcontainer/config/nushell/: config.nu  env.nu
.devcontainer/config/nvim/: init.lua
.devcontainer/config/provisions/: devcontainer-configs.conf  dotfiles.conf  environments.conf  ide.conf  modern-linux-utils.conf
.devcontainer/config/vim/: .vimrc
scripts/: trace.sh
src/proviso/: __init__.py  commons.py
src/proviso/actions/: __init__.py  file_sync.py  git_sync.py  package_install.py  pipeline.py  protocol.py
src/proviso/cli/: __init__.py  dispatch.py  main.py  output.py
src/proviso/devcontainer/: gen.py
src/proviso/manifest/: __init__.py  loader.py  scanner.py
src/proviso/markup/: __init__.py  hocon.py  json.py  protocol.py  (+3 more)
tests/actions/: test_actions.py  test_file_sync.py  test_pipeline.py
tests/cli/: test_cli.py
tests/manifest/: test_e2e.py  test_loader.py  test_scanner.py
tests/markup/: conftest.py  test_registry.py  test_round_trip.py
tests/providers/: test_providers.py
tests/provisions/: conftest.py  test_models.py
tests/resources/: conftest.py  test_models.py
tests/scheduler/: test_scheduler.py
(+23 files in other folders)
