[project]
name = "proviso"
version = "0.1.0"
description = "Universal declarative resource lifecycle manager"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "orjson>=3.10",
    "pyhocon>=0.3.60",
    "pyyaml>=6.0",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests requiring containers",
]

[tool.mypy]
python_version = "3.12"
strict = true
